--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       	
       <a-assets>
         
-        <a-asset-item id="modelo" src="blossoming_boombox.glb"></a-asset-item>
+        <a-asset-item id="modelo" src="queso_asadero.glb"></a-asset-item>
         <a-asset-item id="modelo1" src="cartoon_whale.glb"></a-asset-item>
         <a-asset-item id="modelo2" src="little_cute_frog_tin.glb"></a-asset-item>
      	<a-asset-item id="modelo3" src="mushroom_potion.glb"></a-asset-item>
