--- a/Index.html
+++ b/Index.html
@@ -24,7 +24,7 @@
 	
 	
 
-	<audio id="sound" src="Ansiedad_Generalizada.mp3" preload="auto"></audio>
+	<audio id="sound" src="Asadero rosita.m4a" preload="auto"></audio>
 	<audio id="sound1" src="TOC.mp3" preload="auto"></audio>
 	<audio id="sound2" src="TEPT.mp3" preload="auto"></audio>
 	<audio id="sound3" src="Fobia_Especifica.mp3" preload="auto"></audio>
@@ -37,11 +37,11 @@
 		
       
 		
-	<a-marker id="1" type="barcode" value="20" raycaster="objects: .clickable" emitevents="true"
+	<a-marker id="uno" type="barcode" value="20" raycaster="objects: .clickable" emitevents="true"
 	 cursor="fuse: false; rayOrigin: mouse;">
 			
 		
-	<a-entity gltf-model="#modelo" scale="1 1 1" rotation="-90 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+	<a-entity gltf-model="#modelo" scale="2 2 2" rotation="0 0 0" class="clickable" gesture-handler soundhandler></a-entity>
 			
 	</a-marker>
 			
