--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 	
 
 	<audio id="sound" src="Asadero rosita.m4a" preload="auto"></audio>
-	<audio id="sound1" src="TOC.mp3" preload="auto"></audio>
+	<audio id="sound1" src="Queso rancho.m4a" preload="auto"></audio>
 	<audio id="sound2" src="TEPT.mp3" preload="auto"></audio>
 	<audio id="sound3" src="Fobia_Especifica.mp3" preload="auto"></audio>
 	
@@ -46,9 +46,9 @@
 	</a-marker>
 			
 			
-	<a-marker id="dos" type="barcode" value="3" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;">
+	<a-marker id="dos" type="barcode" value="28" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;">
 				
-	<a-entity gltf-model="#modelo1" scale="2 2 2" rotation="-90 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+	<a-entity gltf-model="#modelo1" scale="1 1 1" rotation="0 0 0" class="clickable" gesture-handler soundhandler></a-entity>
 			
 	</a-marker>
       
