--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <a-asset-item id="modelo" src="queso_asadero.glb"></a-asset-item>
         <a-asset-item id="modelo1" src="queso_ranchero.glb"></a-asset-item>
         <a-asset-item id="modelo2" src="doble_crema_2.glb"></a-asset-item>
-     	<a-asset-item id="modelo3" src="crema_natural_1.glb"></a-asset-item>
+     	<a-asset-item id="modelo3" src="queso_rayado_rosita.glb"></a-asset-item>
 	
 	
 	
@@ -27,7 +27,7 @@
 	<audio id="sound" src="Asadero rosita.m4a" preload="auto"></audio>
 	<audio id="sound1" src="Queso rancho.m4a" preload="auto"></audio>
 	<audio id="sound2" src="Doble crema.m4a" preload="auto"></audio>
-	<audio id="sound3" src="Crema natural.m4a" preload="auto"></audio>
+	<audio id="sound3" src="Rayado rosita.m4a" preload="auto"></audio>
 	
 	
 	
@@ -60,7 +60,7 @@
       
       <a-marker id="cuatro" type="barcode" value="17" raycaster="objects: .clickable" emitevents="true" cursor="fuse: false; rayOrigin: mouse;">
 			
-      <a-entity gltf-model="#modelo3" scale="2 2 2" rotation="-90 0 0" class="clickable" gesture-handler soundhandler></a-entity>
+      <a-entity gltf-model="#modelo3" scale="1 1 1" rotation="-90 0 0" class="clickable" gesture-handler soundhandler></a-entity>
         
 			
        </a-marker>
